<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@drawable/ic_logo_login" />

        <com.sft.hrmsadmin.widget.GothiciRegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/_10sdp"
            android:text="@string/app_name"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_15sdp" />


        <RelativeLayout
            android:id="@+id/rl_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/rectangle_border_solid_white">


            <!--<com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textIpUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Username"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/_10sdp"/>
            </com.google.android.material.textfield.TextInputLayout>-->


            <com.sft.hrmsadmin.widget.GothiciRegularEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:cursorVisible="true"
                android:hint="@string/login_hint"
                android:inputType="text"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textColor="#000000"
                android:textColorHint="#7A8790"
                android:textSize="@dimen/_11sdp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/rl_login"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/rectangle_border_solid_white">

            <com.sft.hrmsadmin.widget.GothiciRegularEditText
                android:id="@+id/etPWD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:cursorVisible="true"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textColor="#000000"
                android:textColorHint="#7A8790"
                android:textSize="@dimen/_11sdp" />


        </RelativeLayout>


        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/rectangle_border_solid_white"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_15sdp" />

        <com.sft.hrmsadmin.widget.GothiciRegularTextView
            android:id="@+id/tvForgotPWD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/_10sdp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_13sdp" />


    </LinearLayout>


</RelativeLayout>